fixed the selection styles, and positioned the sidebar with correct spacing

--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -9,12 +9,12 @@ body{
 }
 .componentContainer {
   max-width: 100%;
-  padding-left: 100px;
-  padding-top: 80px;
+  padding: 100px;
+  padding-right:0px;
 }
 /* offset  and margins */
 
-p, .offset {
+.offset {
   padding-left: 50px;
 }
 li {
@@ -25,6 +25,9 @@ li {
 }
 
 /*Typography */
+h1, h2, h3, h4, p {
+  letter-spacing: 1px;
+}
 h1, h2 {
   margin-left: 100px;
 }
@@ -65,6 +68,7 @@ h3 {
 
 li {
    list-style-type: none;
+   font-size: 16px;
 }
 
 /* span */
@@ -79,5 +83,7 @@ li {
 
 /* sidebar */
 .sidebar {
-
+  padding-right: 80px;
+  padding-left:30px;
+  margin:0;
 }
